<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/user_name_et"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/full_name"
            android:gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>


        <EditText
            android:id="@+id/address_et"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/home_address"
            android:inputType="textPostalAddress"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:id="@+id/sign_in_bt"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
